k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daily-quote-api-service
  labels:
    app: daily-quote-api
spec:
  type: ClusterIP
  selector:
    app: daily-quote-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
