k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daily-quote-web-service
  labels:
    app: daily-quote-web
spec:
  type: ClusterIP
  selector:
    app: daily-quote-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
