k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: daily-quote-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  rules:
    - host: my-nginx.192.168.56.61.sslip.io
      http:
        paths:
          - path: /api/(quote|health)(.*)
            pathType: Prefix
            backend:
              service:
                name: daily-quote-api-service
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: daily-quote-web-service
                port:
                  number: 80
